---
source: tests/core/spec.rs
assertion_line: 235
expression: formatter
---
schema @server(showcase: true) @upstream {
  query: Query
}

type Query {
  notUser: User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/1")
}

type User {
  notId: Int
  notName: String
}
